
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
     android:background="@color/red"
    android:gravity="center_horizontal"
    tools:context=".APP3Activity" >

    <EditText
        android:id="@+id/tituloField"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tituloLibro" />
    
     <EditText
        android:id="@+id/authorField"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/author" />
    
    <EditText
        android:id="@+id/isbnField"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/isbn" />

    <Button
        android:id="@+id/guardarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:onClick="savelibro"
        android:text="@string/guardar" />
    <Button
	    android:id="@+id/deleteButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="17dp"
	    android:onClick="onDeleteButtonClicked"
	    android:visibility="invisible"
	    android:text="@string/deleteButton" />

</LinearLayout>

